--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,4 +1,4 @@
-site_name: 全民瘋AI系列 [探索可解釋人工智慧]
+site_name: 全民瘋AI系列 [深度學習與神經網路]
 site_author: 10程式中
 # site_url: 
 extra_css:
@@ -12,50 +12,24 @@ theme:
     text: 'Roboto'
     code: 'Roboto Mono'
   palette:
-    primary: 'deep purple'
-    accent: 'deep purple'
+    primary: 'red'
+    accent: 'red'
 repo_url: https://github.com/andy6804tw/2023-15th-ironman
 # use_directory_urls: false
 edit_uri: ""
 # Copyright
 copyright: 'Copyright © 2023 - 2024 10程式中'
 nav:
-  - '1.XAI基礎與概念介紹':
-    - '1.揭開模型的神秘面紗:為何XAI對機器學習如此重要.md'
-    - '2.從黑盒到透明化:XAI技術的發展之路.md'
-    - '3.機器學習中的可解釋性指標.md'
-    - '4.LIME vs SHAP:哪種XAI解釋方法更適合你.md'
-    - '5.淺談XAI與傳統機器學習的區別.md'
-  - '2.XAI在傳統機器學習中的應用':
-    - '6.非監督學習也能做到可解釋性-探索XAI在非監督學習中的應用.md'
-    - '7.KNN與XAI:從鄰居中找出模型的決策邏輯.md'
-    - '8.解釋線性模型:探索線性迴歸和邏輯迴歸的可解釋性.md'
-    - '9.基於樹狀結構的XAI方法:決策樹的可解釋性.md'
-    - '10.Permutation Importance:從特徵重要性角度解釋整個模型行為.md'
-    - '11.Partial Dependence Plot:探索特徵對預測值的影響.md'
-  - '3.XAI常用工具介紹':
-    - '12.LIME理論:如何用局部線性近似解釋黑箱模型.md'
-    - '13.LIME實作:實戰演練LIME解釋方法.md'
-    - '14.SHAP理論:解析SHAP解釋方法的核心.md'
-    - '15.SHAP實作:實戰演練SHAP解釋方法.md'
-  - '4.XAI在深度學習中的可解釋性':
-    - '16.神經網路的可解釋性:如何理解深度學習中的黑箱模型.md'
-    - '17.解析深度神經網路:使用Deep SHAP進行模型解釋.md'
-    - '18.CNN:卷積深度神經網路的解釋方法.md'
-    - '19.Perturbation-Based:如何用擾動方法解釋神經網路.md'
-    - '20.Gradient-Based:利用梯度訊息解釋神經網路.md'
-    - '21.Propagation-Based:探索反向傳播法的可解釋性.md'
-    - '22.CAM-Based:如何解釋卷積神經網路.md'
-    - '23.Attention-Based:使用注意力機制解釋CNN模型.md'
-  - '5.XAI在現實生活中的應用案例':
-    - '24.LSTM的可解釋性:解析步態分類中的時序資料.md'
-    - '25.XAI在影像處理中的瑕疵檢測:解釋卷積神經網路的運作.md'
-    - '26.智慧工廠製程中的鋼材缺陷檢測:運用XAI解析數值型感測器數據.md'
-    - '27.XAI在NLP中的應用:以情感分析解釋語言模型.md'
-  - '6.XAI的挑戰與未來':
-    - '28.誤差分析和對抗樣本:如何利用XAI檢測模型的弱點.md'
-    - '29.XAI如何影響人類對技術的信任和接受程度.md'
-    - '30.XAI未來發展方向:向更可靠的機器學習模型邁進.md'
+  - '1.基礎概念':
+    - '1.1迴歸分析.md'
+    - '1.2探索誤差的來源.md'
+    - '1.3梯度下降的原理.md'
+    - '1.4分類問題.md'
+    - '1.5邏輯迴歸.md'
+
+  - '2.神經網路概念':
+    - '2.1深度學習簡介.md'
+    
 
 
 
@@ -66,11 +40,11 @@ markdown_extensions:
       guess_lang: false
   - toc:
       permalink: false
-plugins:
-  - search
-  - mkpdfs:
-      design: design/report.css
-      author: Tsai Yi Lin
-      # company: "10程式中"
-      toc_title: Table of contents
-      output_path: pdf/全民瘋AI系列_探索可解釋人工智慧_v1.1.pdf
+# plugins:
+#   - search
+#   - mkpdfs:
+#       design: design/report.css
+#       author: Tsai Yi Lin
+#       # company: "10程式中"
+#       toc_title: Table of contents
+#       output_path: pdf/全民瘋AI系列_深度學習與神經網路_v1.1.pdf
