--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -27,10 +27,13 @@ nav:
     - '1.4分類問題.md'
     - '1.5邏輯迴歸.md'
 
-  - '2.神經網路概念':
+  - '2.深度神經網路':
     - '2.1深度學習簡介.md'
     
-
+  # - '3. 卷積神經網路':
+  # - '4. 循環神經網路':
+  - '5.Transformer架構':
+    - '5.Transformer架構/5.1Attention Is All You Need.md'
 
 
 markdown_extensions:
