add DNN classification

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -45,6 +45,7 @@ nav:
   - 'TensoeFlow 101':
     - 'TensoeFlow 101/TensorFlow 基礎介紹.md'
     - 'TensoeFlow 101/DNN Regression.md'
+    - 'TensoeFlow 101/DNN Classification.md'
   - 'PyTorch 101':
     - 'PyTorch 101/1. PyTorch 基礎介紹.md'  
 
