--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -42,10 +42,11 @@ nav:
     - '5.Transformer架構/5.1Attention Is All You Need.md'
     - '5.Transformer架構/5.2Transformer.md'
     - '5.Transformer架構/5.3Transformer.md'
-  - 'TensoeFlow 101':
-    - 'TensoeFlow 101/TensorFlow 基礎介紹.md'
-    - 'TensoeFlow 101/DNN Regression.md'
-    - 'TensoeFlow 101/DNN Classification.md'
+  - 'TensorFlow 101 從零開始':
+    - 'TensorFlow 101 從零開始/README.md'
+    - 'TensorFlow 101 從零開始/TensorFlow 基礎介紹.md'
+    - 'TensorFlow 101 從零開始/DNN Regression.md'
+    - 'TensorFlow 101 從零開始/DNN Classification.md'
   - 'PyTorch 101':
     - 'PyTorch 101/1. PyTorch 基礎介紹.md'  
 
