--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -32,7 +32,7 @@ nav:
     - '1.基礎概念/1.5邏輯迴歸.md'
 
   - '2.深度神經網路':
-    - '2.1深度學習簡介.md'
+    - '2.深度神經網路/2.1深度學習簡介.md'
     
   - '3. 卷積神經網路':
     - '3.卷積神經網路/3.1CNN.md'
