--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -57,13 +57,22 @@ markdown_extensions:
       guess_lang: false
   - toc:
       permalink: false
+  # katex math
   - pymdownx.arithmatex:
       generic: true
   - admonition
   - pymdownx.details
+  # Code blocks
+  - pymdownx.highlight:
+      anchor_linenums: true
+      line_spans: __span
+      pygments_lang_class: true
+  - pymdownx.inlinehilite
+  - pymdownx.snippets
+  - pymdownx.superfences
 plugins:
-  - tags:
-      tags_file: tags.md
+  # - tags:
+  #     tags_file: tags.md
   - search
 #   - mkpdfs:
 #       design: design/report.css
